--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -46,3 +46,10 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+@media (max-width: 700px) {
+  [data-dropdown] .dropdown-menu {
+    display: block;
+    animation: show-up 0.3s forwards;
+  }
+}
