--- a/src/styles/geral.css
+++ b/src/styles/geral.css
@@ -221,12 +221,19 @@ body {
 }
 
 .js [data-anime="accordion"] dt::after {
-  content: "⮧";
+  content: "";
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background: url("../../public/imgs/arrow-red.svg") no-repeat center center;
   margin-left: 10px;
+  transform: rotate(90deg);
+  transition: transform 0.3s;
 }
 
 .js [data-anime="accordion"] dt.active::after {
-  content: "⮥";
+  content: "";
+  transform: rotate(-90deg);
 }
 
 .js [data-anime="accordion"] dd {
@@ -299,7 +306,7 @@ body {
   }
 
   .grid-section h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .menu {
@@ -347,4 +354,11 @@ body {
     max-height: 200px;
     opacity: 1;
   }
+}
+
+.arrow-black {
+  background: url("../../public/imgs/arrow-black.svg") no-repeat center center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
 }
