--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -17,11 +17,13 @@
 
 .modal {
   background: white;
-  min-width: 300px;
+  width: 80vw;
+  max-width: 600px;
   padding: 40px;
   border: 10px solid #fb5;
   box-shadow: 0 0 0 10px white;
   position: relative;
+  box-sizing: border-box;
 }
 
 .close {
@@ -33,7 +35,7 @@
   top: -30px;
   right: -30px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
-  background: #e54;
+  background: #e54 url("../../public/imgs/fechar.svg") no-repeat center center;
   font-size: 1.2rem;
   color: white;
   font-family: monospace;
@@ -51,6 +53,8 @@
   width: 100%;
   padding: 0.7rem 0.5rem;
   box-sizing: border-box;
+  border: 2px solid #222;
+  border-radius: none;
 }
 
 .modal button[type="submit"] {
